# earcutr

./: Cargo.toml  LICENSE  OPTO.md  README.md
benches/: run.rs  speedtest.rs
benches/benchoutput/: bad_diagonals.js  bad_hole.js  building.js  degenerate.js  dude.js  eberly_3.js  eberly_6.js  empty_square.js  hilbert.js  hole_touching_outer.js  issue16.js  issue17.js  issue29.js  issue34.js  issue35.js  issue45.js  issue52.js  issue83.js  outside_ring.js  self_touching.js  shared_points.js  simplified_us_border.js  steiner.js  touching_holes.js  water.js  water2.js  water3.js  water3b.js  water4.js  water_huge.js  water_huge2.js
examples/: main.rs
src/: lib.rs  node.rs
tests/: build.rs  integration_test.rs
tests/fixtures/: dude.json
viz/: README  animhelp.js  datapoints.js  earcut.js  m.html  maketestfiles.sh  testfiles.js  viz.css  viz.html  viz.js
viz/testoutput/: bad-diagonals.js  bad-hole.js  bad_diagonals.js  bad_hole.js  building.js  degenerate.js  dude.js  eberly-3.js  eberly-6.js  eberly_3.js  eberly_6.js  empty-square.js  empty_square.js  hilbert.js  hole-touching-outer.js  hole_touching_outer.js  issue16.js  issue17.js  issue29.js  issue34.js  issue35.js  issue45.js  issue52.js  issue83.js  outside-ring.js  outside_ring.js  self-touching.js  self_touching.js  shared-points.js  shared_points.js  simplified-us-border.js  simplified_us_border.js  steiner.js  touching-holes.js  touching_holes.js  water-huge.js  water-huge2.js  water.js  water2.js  water3.js  (+5 more)
