[package]
name = "earcutr"
version = "0.1.0"
authors = ["don bright <hmbright@fastmail.com>"]

[dependencies]
rayon = "1.0"

[dev-dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
bencher ="0.1.5"

[[bench]]
name = "speedtest"
harness = false

# for profiling with standard tools, like
# Valgrind's Callgrind or Perf
[profile.release] 
debug = true

# for profiling with CpuProfiler
#[dependencies]
#cpuprofiler = "0.0.3"

